--- a/client/public/index.html
+++ b/client/public/index.html
@@ -64,14 +64,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
       
 
-    -->
-
-        <script type="text/javascript">
-            function setHeight(fieldId) {
-                document.getElementById(fieldId).style.height =
-                    document.getElementById(fieldId).scrollHeight + 'px'
-            }
-            setHeight('textarea')
-        </script>
-    </body>
+    --></body>
 </html>
